manifests/todo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-todo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: django-todo
  template:
    metadata:
      labels:
        app: django-todo
    spec:
      terminationGracePeriodSeconds: 40
      containers:
      - name: django-todo
        image: exciter86/django-todo:1.0
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 200m
            memory: 500Mi
      restartPolicy: Always
